# ROS-workshop

./: .fix_sdf.py  .workshop_aliases  README.md  setup_workshop.bash
install/: local_setup.sh  setup.sh
log/: latest_build
src/broken_ros_package/: package.xml  setup.cfg  setup.py
src/broken_ros_package/broken_ros_package/: pub_node.py  sub_node.py
src/broken_ros_package/launch/: both_nodes.launch.py
src/clearpath_gz/: CMakeLists.txt
src/clearpath_gz/clearpath_setup/: robot.yaml
src/clearpath_gz/launch/: simulation.launch.py
src/example-ros-package/: setup.py
src/example-ros-package/example_package/: pub_node.py
src/example_ros_package/: package.xml  setup.cfg  setup.py
src/example_ros_package/example_ros_package/: pub_node.py  sub_node.py
src/example_ros_package/launch/: both_nodes.launch.py
src/imprimis_sim_description/: CMakeLists.txt  package.xml
src/imprimis_sim_description/launch/: view_robot.launch.py
src/imprimis_sim_description/rviz/: diffbot.rviz  diffbot_view.rviz
src/imprimis_sim_description/urdf/: diffbot.ros2_control.xacro  diffbot.urdf.xacro  diffbot_description.urdf.xacro  gazebo_info.xacro
src/imprimis_sim_hardware/: CMakeLists.txt  README.md  package.xml
src/imprimis_sim_hardware/config/: diffbot_controllers.yaml
src/imprimis_sim_hardware/launch/: imprimis_hardware.launch.py
src/imprimis_sim_hardware/src/: spin_server.cpp
src/imprimis_sim_hardware/worlds/: warehouse.sdf
src/imprimis_sim_navigation/: CMakeLists.txt  package.xml
src/imprimis_sim_navigation/launch/: basic_nav.launch.py  (+1 more)
src/imprimis_sim_utils/: package.xml  setup.cfg  setup.py
src/imu-example-package/: package.xml  setup.py
src/imu_example/: setup.cfg
src/launch_file_example_pkg/: package.xml  setup.cfg  setup.py
src/orbit_pkg/: package.xml  setup.cfg  setup.py
src/spin_service_caller/: package.xml  setup.cfg  setup.py
terminal_practice/cat_walkthrough/: textFile1.txt  textFile2.txt
(+32 files in other folders)
